# sphinx_test

./: .gitignore  Makefile  genindex.html  index.html  pyproject.toml  search.html
.github/workflows/: static.yml
_sources/: index.rst.txt
_sources/regular/webapp-basic-1/: index.rst.txt
regular/: index.html
regular/webapp-basic-1/: index.html
source/: conf.py  index.rst
source/regular/webapp-basic-1/: index.rst
