[tool.poetry]
name = "sphinx-test"
version = "0.1.0"
description = ""
authors = ["Kumita Akira <akira_kumita@demia.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sphinx = "<8.0.0"
sphinx-autobuild = "^2024.9.19"
cloud-sptheme = "^1.10.1.post20200504175005"
sphinx-rtd-theme = "^2.0.0"
sphinx-tabs = "^3.4.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
